--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -1,22 +1,111 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
   <head>
+
     <meta charset="UTF-8" />
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Prework Study Guide</title>
+
   </head>
+
   <body>
+
     <header id="top">
+
       <h1>Prework Study Guide</h1>
+
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+
     </header>
+
     <main>
-      <!-- Student code goes here -->
+
+      <section class="card" id="html-section">
+
+        <h2>HTML</h2>
+
+     <ul>
+
+       <li>The head element contains information about the webpage.</li>
+
+       <br/>
+
+       <li>The body element represents the visible content shown to the user.</li>
+
+       <br/>
+
+       <li>The Footer element appears at the bottom of the page and contains information like copyrights.</li>
+      
+     </ul>
+
+      </section>
+   
+      <section class="card" id="css-section">
+
+        <h2>CSS</h2>
+
+     <ul>
+
+       <li>Enter your CSS notes here</li>
+
+     </ul>
+   
+      </section>
+   
+      <section class="card" id="git-section">
+
+        <h2>Git</h2>
+
+     <ul>
+
+      <li>git status: checks what branch we are currently on</li>
+
+      <br/>
+
+      <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+
+      <br/>
+
+      <li>git merge [alias]/[branch] merges a remote branch into your current branch to bring it up to date</li>
+
+      <br/>
+
+      <li>git push [alias] [branch] Transmits local branch commits to the remote repository branch</li>
+
+      <br/>
+      
+      <li>git pull fetches and merges any commits from the tracking remote branch</li>
+
+     </ul>
+   
+      </section>
+   
+      <section class="card" id="javascript-section">
+
+        <h2>JavaScript</h2>
+
+     <ul>
+
+       <li>Enter your JavaScript notes here</li>
+
+     </ul>
+   
+      </section>
+
     </main>
 
     <footer>
+
       <p>I can code!</p>
+
     </footer>
+
   </body>
+
 </html>
