--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -10,6 +10,8 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <link rel="stylesheet" href="./assets/style.css">
+
     <title>Prework Study Guide</title>
 
   </head>
@@ -52,7 +54,11 @@
 
      <ul>
 
-       <li>Enter your CSS notes here</li>
+      <li>A margin indicates how much space we want around the outside of an element.</li>
+    
+      <li>A padding indicates how much space we want around the content inside an element.</li>
+
+      <li>* applies to everything in the page.</li>  
 
      </ul>
    
