added funtion in java

--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -57,8 +57,12 @@
      <ul>
 
       <li>A margin indicates how much space we want around the outside of an element.</li>
+
+      <br/>
     
       <li>A padding indicates how much space we want around the content inside an element.</li>
+
+      <br/>
 
       <li>* applies to everything in the page.</li>  
 
@@ -100,7 +104,15 @@
 
      <ul>
 
-       <li>Enter your JavaScript notes here</li>
+      <li>A variable is a named container that allows us to store data in our code.</li>
+
+      <br/>
+
+      <li>Control flow is the order in which a computer executes code in a script.</li>
+
+      <br/>
+
+      <li>A function is a block of code that can be called for later use</li>
 
      </ul>
    
